RESOLVED FIXED285031
AX: AXPropertyName::DatetimeAttributeValue doesn't get updated when the datetime attribute changes
https://bugs.webkit.org/show_bug.cgi?id=285031
Summary AX: AXPropertyName::DatetimeAttributeValue doesn't get updated when the datet...
Tyler Wilcock
Reported 2024-12-20 10:07:11 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-20 10:07:33 PST
Tyler Wilcock
Comment 2 2024-12-20 10:13:07 PST
EWS
Comment 3 2024-12-20 15:38:31 PST
Committed 288197@main (acb1a34b7a01): <https://commits.webkit.org/288197@main> Reviewed commits have been landed. Closing PR #38272 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.