Source/WebCore/accessibility/AXObjectCache.h
@@ -172,6 +172,7 @@ protected:
     macro(ContentEditableAttributeChanged) \
     macro(ControlledObjectsChanged) \
     macro(CurrentStateChanged) \
+    macro(DatetimeChanged) \
     macro(DescribedByChanged) \
     macro(DisabledStateChanged) \
     macro(DropEffectChanged) \
