Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp
@@ -292,7 +292,6 @@ void AXIsolatedObject::initializeProperties(const Ref<AccessibilityObject>& axOb
         setProperty(AXPropertyName::RowIndexRange, object.rowIndexRange());
         setProperty(AXPropertyName::AXColumnIndex, object.axColumnIndex());
         setProperty(AXPropertyName::AXRowIndex, object.axRowIndex());
-        // FIXME: This doesn't get updated when the scope attribute dynamically changes.
         setProperty(AXPropertyName::IsColumnHeader, object.isColumnHeader());
         setProperty(AXPropertyName::IsRowHeader, object.isRowHeader());
         setProperty(AXPropertyName::CellScope, object.cellScope().isolatedCopy());
